# Jennifer_W8_Individual_Project_2

./: .coverage  GooseDB.db  Makefile  README.md  main.py  performance_comparison.csv  python_benchmarks.csv  requirements.txt  rust_benchmarks.csv  test_main.py
.github/workflows/: CI.yml  python_CI.yml  rust_CI.yml
Calculation/: Cargo.toml  Makefile
Calculation/src/: main.rs
Rust_SQL/: Cargo.toml  GooseDB.db  GooseDB.db-shm  Makefile  python_benchmarks.csv
Rust_SQL/src/: lib.rs  main.rs
data/: GooseDB.db
mylib/: extract.py  query.py  transform_load.py
