[package]
name = "Rust_SQL"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rusqlite = "0.32.1"
psutil = "1.0" 
sysinfo = "0.29"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
jemallocator = "0.5"
jemalloc-ctl = "0.5"
lazy_static = "1.4"
serial_test = "2.0"

[profile.release]
debug = false
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true