[package]
name = "Rust_SQL"
version = "0.1.0"
edition = "2021"

# Explicitly define the binary
[[bin]]
name = "Rust_SQL"
path = "src/main.rs"

# Dependencies
[dependencies]
# CLI and parsing
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

# Database
rusqlite = "0.32.1"

# System monitoring
psutil = "1.0" 
sysinfo = "0.29"

# Memory allocation
jemallocator = "0.5"
jemalloc-ctl = "0.5"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full", "test-util"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }

# Error handling
anyhow = "1.0"

# Testing
lazy_static = "1.4"
serial_test = "2.0"

# Release profile optimization
[profile.release]
debug = false
lto = true            # Link-time optimization
opt-level = 3         # Maximum optimization
codegen-units = 1     # Slower compilation but better optimization
panic = "abort"       # Remove extra code for unwinding
strip = true          # Remove debug symbols

# Development profile
[profile.dev]
opt-level = 0
debug = true